# opengl_hello_world

./: CMakeLists.txt  EBO.cpp  EBO.h  README.md  VAO.cpp  VAO.h  VBO.cpp  VBO.h  camera.cpp  camera.h  main.cpp  panic.h  shader.cpp  shader.h  texture.cpp  texture.h
shaders/: default.frag  default.vert
